--- a/plugin.yml
+++ b/plugin.yml
@@ -2,4 +2,7 @@ name: EntitiesCleaner
 main: ifteam\EntitiesCleaner\EntitiesCleaner
 version: 0.2-Alpha
 author: ifteam
-api: [1.12.0]
+api:
+- 1.12.0
+- 1.13.0
+- 2.0.0
